Open Vehicle Monitor System v3 - Change log

????-??-?? ???  ???????  OTA release
- Wifi: scanning apclient mode, network selection dialog in wizard & wifi config,
    scan support in all modes, fixed network selection by signal strength
    (possibly also fixes issue #387)
  New/updated commands:
    wifi scan           -- can now be issued in any mode
    wifi scan -j        -- output scan result as JSON object (for web UI)
    wifi reconnect      -- request a client reconnect cycle
    wifi mode apclient  -- now accepts empty stassid & optional stabssid
- #377 Make some metrics (e.g. v.b.soc) persistent across warm reboots
  This includes crashes and firmware updates

2020-05-31 MWJ  3.2.013 OTA release
- TLS Trusted CA update (for addtrust/usertrust)
- TPMS subsystem, and support for K-Line TPMS ECU in Tesla Roadster
- #374 The server.v2 config section should be read/write

2020-04-22 MWJ  3.2.012 OTA release
- #357 tpms rear left temperature incorrect in v2 protocol
- #354 Flush UART buffer when power cycling modem
- General stability improvements to CAN logging and playback

2020-04-03 MWJ  3.2.011 OTA release
- #327 Tesla Roadster: Vehicle AWAKE metric not correct
- #311 OvmsEvents::ScheduleEvent with delay_ms < 10
- #333 Support for SSL/TLS Trusted Certificate Authorities
- #334 Support for SSL/TLS MQTT connections in Server v3
- #335 Support for SSL/TLS MQTT connections in Server v2
- #338 SSL/TLS maximum segment size forced to 2048 bytes
- #341 Support paranoid mode in server v2
- #343 TPMS message has no -1 setting for "disable" in ovms_server_v2.cpp
- #342 OTA updates available (when not on wifi)
- #351 Tesla Model S: Spurious vehicle idle alerts after vehicle firmware update

2020-02-03 MWJ  3.2.010 OTA release
- EGPIO: address multiple ports by input & output command
- SmartED: issue #293 fixed
  change savestatus from store to sd
  Add ecoscore system to drive report and web interface like defunct smart web app. (added by frantek)